--- a/biosphere/index.html
+++ b/biosphere/index.html
@@ -110,7 +110,7 @@
       "liquid", "phase", "time", "wave",
       "solid", "matter", "gravity", "force",
       "plasma", "energy", "light", "warp",
-      "gas", "vaccuum", "space", "flux"
+      "gas", "vacuum", "space", "flux"
     ];
 
     const equipment = [
