--- a/biosphere/index.html
+++ b/biosphere/index.html
@@ -101,7 +101,7 @@
     ]
     const adjectives = [
       "hydraulic", "organic", "thermal", "fluidic",
-      "nuclear", "carbon", "organic", "graphene",
+      "nuclear", "carbon", "nano", "graphene",
       "quantum", "magnetic", "photonic", "solar",
       "atomic", "vapor", "prismatic", "static"
     ]
