--- a/biosphere/index.html
+++ b/biosphere/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Biosphere</title>
+  <title>String Theory</title>
   <style type="text/css">
     .bio-main {
       background: black;
@@ -14,6 +14,7 @@
       flex-direction: column;
       align-content: center;
       justify-content: center;
+
     }
 
     .bio-display {
@@ -62,16 +63,16 @@
     }
 
     .bio-sequence__chit--W {
-      background-color: #EEEEFF;
-      box-shadow: 0px 0px 40px white;
+      background-color: gold;
+      box-shadow: 0px 0px 40px gold;
     }
 
     .bio-name {
       text-transform: uppercase;
       text-align: center;
-      font-family: sans-serif;
-      font-size: 24px;
-      letter-spacing: 10px;
+      font-family: monospace;
+      font-size: 20px;
+      letter-spacing: 2px;
       font-weight: bold;
       ;
     }
@@ -99,25 +100,47 @@
       "RR", "RW", "RB", "RG",
       "WW", "WB", "WG", "WR",
     ]
-    const adjectives = [
-      "hydraulic", "organic", "thermal", "fluidic",
-      "nuclear", "carbon", "nano", "graphene",
-      "quantum", "magnetic", "photonic", "solar",
-      "atomic", "vapor", "prismatic", "static"
+    // const adjectives = [
+    //   "hydraulic", "organic", "thermal", "fluidic",
+    //   "nuclear", "carbon", "nano", "graphene",
+    //   "quantum", "magnetic", "photonic", "solar",
+    //   "atomic", "vapor", "prismatic", "static"
+    // ]
+
+    // const aspects = [
+    //   "liquid", "phase", "time", "wave",
+    //   "solid", "matter", "gravity", "force",
+    //   "plasma", "energy", "light", "warp",
+    //   "gas", "vacuum", "space", "flux"
+    // ];
+
+    // const equipment = [
+    //   "turbine", "compressor", "converter", "condenser",
+    //   "crystal", "exciter", "sublimator", "scrubber",
+    //   "engine", "circuit", "capacitor", "laser",
+    //   "manifold", "piston", "exchange", "filter"
+    // ]
+
+
+    const subjects = [
+      "the past", "a broken heart", "the path", "a stranger",
+      "the present", "a couple", "a wounded soul", "one",
+      "the future", "the lost one", "a voice", "this group",
+      "the timeline", "a joyful laugh", "a distant echo", "a chance encounter"
     ]
 
-    const aspects = [
-      "liquid", "phase", "time", "wave",
-      "solid", "matter", "gravity", "force",
-      "plasma", "energy", "light", "warp",
-      "gas", "vacuum", "space", "flux"
+    const verbs = [
+      "is", "was", "avoids", "was never",
+      "understands", "must be", "gains", "may mend",
+      "may destroy", "creates", "loses", "nurtures",
+      "answers", "redefines", "betrays", "demands"
     ];
 
-    const equipment = [
-      "turbine", "compressor", "converter", "condenser",
-      "crystal", "exciter", "sublimator", "scrubber",
-      "engine", "circuit", "capacitor", "laser",
-      "manifold", "piston", "exchange", "filter"
+    const objects = [
+      "alone", "in the dark", "our best intentions", "a hidden agenda",
+      "what may haunt us", "what must be found", "a discovery", "the question",
+      "what could have been", "an option", "with utmost care", "an opening",
+      "the end goal", "without mercy", "an advantage", "forever"
     ]
 
     const generateSequence = () => {
@@ -129,7 +152,7 @@
     }
 
     const generateName = (sequence) => {
-      const banks = [adjectives, aspects, equipment];
+      const banks = [subjects, verbs, objects];
       const result = [];
       for (let i = 0; i < 3; i++) {
         const bank = banks[i];
@@ -158,12 +181,32 @@
       return container;
     }
 
+    const isRedundant = (sequence, sequences) => {
+      
+      const hasExisting = sequences.some( s => {
+       for( let i = 0; i < 6; i += 2 ) {
+        if( s.substr(i, 2) === sequence.substr(i, 2))
+          return true;
+       }
+       return false;
+      })
+
+      return hasExisting;
+    }
+
     const regenerate = () => {
       const main = document.querySelector(".bio-main")
+      const sequences = [];
       main.innerHTML = "";
 
       for (let i = 0; i < 4; i++) {
-        const sequence = generateSequence();
+        let sequence;
+        while( true ) {
+          sequence = generateSequence();
+          if( !isRedundant(sequence, sequences) )
+            break;
+        }
+        sequences.push( sequence );
         const display = generateSequenceDisplay(sequence);
         main.appendChild(display);
       }
