--- a/stringtheory/index.html
+++ b/stringtheory/index.html
@@ -84,11 +84,13 @@
     </div>
   
     <div class="bio-main">
-      
+      <textarea class="js-game-state" name="game"></textarea>
+      <div class="js-gm-message bio-alert"></div>
     </div>
 
     <div class="bio-controls">
       <button name="reset">Reset Game</button>
+      <button name="import">Import Game</button>
       <button name="secrets">Show Secrets</button>
       <button name="back">Back To Game</button>
     </div>
