--- a/balancing/index.html
+++ b/balancing/index.html
@@ -263,7 +263,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: end;;
-
+    gap: 5px;
     width: 100%;
     box-sizing: border-box;
     height: 20vh;
@@ -275,7 +275,9 @@
 
   .bar {
     height: calc( var(--value) / var(--max) * 90% );
-    width: 20px;
+    /* width: 20px; */
+    flex: 1 1 100%;
+    
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     background: var(--accent);
@@ -464,7 +466,7 @@
     
     </div>
 
-    <h3>Single Game Resources</h3>
+    <h3>Single Game (Resources)</h3>
     <div class="bars js-bars">
 
     </div>
