basic willpower stats

--- a/balancing/index.html
+++ b/balancing/index.html
@@ -31,8 +31,23 @@
             <output></output> resources.</li>
           <li><input name="action" type="range" min="1" max="10" value="3" step="1" /> The society does its actions with
             <output></output> resources.</li>
+
         </ul>
       </details>
+
+      
+      <details open>
+        <summary>Willpower</summary>
+        <ul>
+          <li><input name="create" type="range" min="0" max="100" value="10" step="1" /> Use willpower to create resources in
+            <output></output>% of rounds.
+          </li>
+          <li><input name="numcreate" type="range" min="0" max="4" value="1" step="1" /> Use willpower to create up to <output></output>
+            resources when applicable.
+          </li>
+        </ul>
+      </details>
+
 
       <details open>
         <summary>The DM</summary>
