--- a/balancing/index.html
+++ b/balancing/index.html
@@ -82,7 +82,7 @@
 
     <section>
       <h3>Game End Distributions: <a class="js-view" data-type="total">Total</a> &middot; <a class="js-view"
-          data-type="created">Created</a> &middot; <a class="js-view" data-type="destroyed">Destroyed</a></h3>
+          data-type="created">Created</a> &middot; <a class="js-view" data-type="destroyed">Destroyed</a> &middot; <a class="js-view" data-type="outcomes">Outcomes</a></h3>
       <div class="bars bells total js-bell">
 
       </div>
