--- a/simulation/index.html
+++ b/simulation/index.html
@@ -87,9 +87,14 @@
     </aside>
 
     <section>
-      <h3>Game End Distributions: <a class="js-view" data-type="total">Total</a> &middot; <a class="js-view"
-          data-type="created">Created</a> &middot; <a class="js-view" data-type="destroyed">Destroyed</a> &middot; <a
-          class="js-view" data-type="outcomes">Outcomes</a></h3>
+      <h3>Game End Distributions: 
+        <a class="js-view" data-type="total">Total</a> &middot; 
+        <a class="js-view" data-type="created">Created</a> &middot; 
+        <a class="js-view" data-type="destroyed">Destroyed</a> &middot; 
+        <a class="js-view" data-type="outcomes">Outcomes</a> &middot;
+        <a class="js-view" data-type="lost">Communities Lost</a>
+      </h3>
+
       <div class="bars bells total js-bell">
 
       </div>
@@ -104,7 +109,18 @@
       <table class="js-log">
 
       </table>
+
+      <details open>
+        <summary>Game Log</summary>
+      
+        <table class="js-terminal">
+      
+        </table>
+      </details>
+
     </section>
+
+
 
 
   </main>
