--- a/simulation/index.html
+++ b/simulation/index.html
@@ -31,6 +31,10 @@
             <input name="leaders" type="range" min="1" max="10" value="2" step="1" />
             There are <output name="leaders"></output> leaders.
           </li>
+          <li>
+            <input name="maxresources" type="range" min="1" max="10" value="3" step="1" />
+            Societies use up to <output name="maxresources"></output> resources each action.
+          </li>
         </ul>
       </details>
       
